@@ -68,7 +68,7 @@ SOURCE=.\as\link\asxxxx_config.h.in
 # Begin Custom Build
 InputPath=.\as\link\asxxxx_config.h.in
 
-"as/lib/asxxxx_config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+"as/link/asxxxx_config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
 	gawk -f configure_vc.awk as/link/asxxxx_config.h.in > as/link/asxxxx_config.h
 
 # End Custom Build
@@ -78,7 +78,7 @@ InputPath=.\as\link\asxxxx_config.h.in
 # Begin Custom Build
 InputPath=.\as\link\asxxxx_config.h.in
 
-"as/lib/asxxxx_config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+"as/link/asxxxx_config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
 	gawk -f configure_vc.awk as/link/asxxxx_config.h.in > as/link/asxxxx_config.h
 
 # End Custom Build
